<resources>
    <string name="app_name">Cineinfo</string>
    <string name="api_key">5642ce84f4c9f61167f3ac8a41fbb7d0</string>
    <string name="movie_thumbnail_desc">movie poster thumbnail</string>
    <string name="filter">Filter</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="sort_criteria">sort criteria</string>
    <string name="sort_criteria_id">sort criteria id</string>
    <string name="movie_object">movie object</string>
    <string name="movie_backdrop_desc">Movie Backdrop poster</string>
    <string name="released_on">Released</string>
    <string name="rating">Rating</string>
    <string name="no_network_message">No Internet Connection! Tap to retry.</string>
    <string name="retry_loading_button">Retry to load movies</string>
    <string name="overview">Overview</string>
    <string name="favourite_button">Button to mark movie as favourite</string>
    <string name="favourites">Favourites</string>
    <string name="added_to_favourite">Movie added to Favourites</string>
    <string name="removed_from_favourite">Movie removed from Favourites</string>
    <string name="casts">Casts</string>
    <string name="trailers">Trailers</string>
    <string name="trailer_description">Trailer Poster</string>
    <string name="play_button">Play button image</string>
    <string name="reviews">Reviews</string>
    <string name="scroll_casts">Scroll to right for more casts</string>
    <string name="scroll_trailers">Scroll to right for more trailers</string>
    <string name="scroll_reviews">Scroll to right for more reviews</string>
    <string name="no_favourites">Nothing in the favourites!!</string>
    <string name="video_error">Cannot find any app to open the video</string>
    <string name="share_movie">Share Movie</string>
    <string name="chooser_title">Share Trailer with</string>
    <string name="curtain_going_up">Steel curtain image going up</string>
</resources>


