<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/filter"
        android:icon="@drawable/ic_sort_white_24dp"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/popular_movies"
                    android:title="@string/popular_movies"
                    android:orderInCategory="1"/>
                <item
                    android:id="@+id/top_rated_movies"
                    android:title="@string/top_rated_movies"
                    android:orderInCategory="2"/>
                <item
                    android:id="@+id/favourite_movies"
                    android:title="@string/favourites"
                    android:orderInCategory="3"/>
            </group>
        </menu>
    </item>
</menu>