<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/movies_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:itemCount="3"
            tools:listitem="@layout/movie_item_layout" />

        <ProgressBar
            android:id="@+id/loading_pb"
            android:layout_width="@dimen/medium_icon_size"
            android:layout_height="@dimen/medium_icon_size"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/no_favourite_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/large_spacing"
            android:layout_marginEnd="@dimen/large_spacing"
            android:layout_marginLeft="@dimen/large_spacing"
            android:layout_marginRight="@dimen/large_spacing"
            android:layout_marginStart="@dimen/large_spacing"
            android:layout_marginTop="@dimen/large_spacing"
            android:gravity="center"
            android:text="@string/no_favourites"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/movies_rv" />

        <LinearLayout
            android:id="@+id/no_connection_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/medium_spacing"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/retry_ib"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="@dimen/large_icon_size"
                android:layout_height="@dimen/large_icon_size"
                android:layout_gravity="center"
                android:contentDescription="@string/retry_loading_button"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/ic_refresh_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/no_network_message"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</layout>